--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
 
     <div class="images">
       <img src="https://upload.wikimedia.org/wikipedia/commons/0/03/WikipediaHangmotor.jpg" alt="Powered hang glider in flight with rear-mounted engine and propeller">
-      <img src="https://images.pexels.com/photos/8390443/pexels-photo-8390443.jpeg" alt="Powered gliding adventure soaring high above mountains">
-      <img src="https://images.pexels.com/photos/8390428/pexels-photo-8390428.jpeg" alt="Motorized glider pilot flying dynamically in clear blue sky">
+      <img src="https://i.imgflip.com/ah4p5j.jpg" alt="Powered gliding adventure soaring high above mountains">
+      <img src="https://i.imgflip.com/ah4pc4.jpg" alt="Motorized glider pilot flying dynamically in clear blue sky">
     </div>
 
     <p>This premium domain is ideal for powered hang gliding schools, paramotor/paramotoring equipment sellers, adventure tour companies, flight training centers, or enthusiasts of motorized human-powered flight.</p>
